--- a/client/.env
+++ b/client/.env
@@ -1,3 +1,3 @@
-REACT_APP_BASE_URL="http://localhost:5000/api"
-REACT_APP_ASSETS_URL="http://localhost:5000"
+REACT_APP_BASE_URL="https://blog-tqra.onrender.com/api"
+REACT_APP_ASSETS_URL="https://blog-tqra.onrender.com"
 
